--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,20 +1,20 @@
 services:
-  app:
-    build:
-      context: .              # Caminho onde está seu Dockerfile
-      dockerfile: Dockerfile  # Nome do Dockerfile (padrão, pode até omitir)
-    container_name: grpc_eleitores
-    ports:
-      - "8000:8000"           # Mapeia a porta do container para a máquina local
-    volumes:
-      - .:/eleitor          # Sincroniza o código local com o diretório /app no container (opcional em produção)
-    depends_on:
-      - postgres
-    command: >
-      python gr/servidor.py --host 0.0.0.0 --port 8000
-    environment:
-      - PYTHONUNBUFFERED=1    # Evita buffering do stdout
-      - PYTHONPATH=/eleitor   # Garante que o Python encontre o módulo 'domain'
+  # app:
+  #   build:
+  #     context: .              # Caminho onde está seu Dockerfile
+  #     dockerfile: Dockerfile  # Nome do Dockerfile (padrão, pode até omitir)
+  #   container_name: grpc_eleitores
+  #   ports:
+  #     - "8000:8000"           # Mapeia a porta do container para a máquina local
+  #   volumes:
+  #     - .:/eleitor          # Sincroniza o código local com o diretório /app no container (opcional em produção)
+  #   depends_on:
+  #     - postgres
+  #   command: >
+  #     python gr/servidor.py --host 0.0.0.0 --port 8000
+  #   environment:
+  #     - PYTHONUNBUFFERED=1    # Evita buffering do stdout
+  #     - PYTHONPATH=/eleitor   # Garante que o Python encontre o módulo 'domain'
   postgres:
     image: postgres:latest
     container_name: db_eleicao
